Optimized Integer instantiation
git-svn-id: https://svn.code.sf.net/p/sweethome3d/code/trunk/SweetHome3D@5858 03e323e1-6c6c-46a5-9f71-c4ce5d8c6204